# pdninja

./: README.md  pyproject.toml  rules_windows_generic_pysigma.json  rules_windows_sysmon_pysigma.json
.github/workflows/: main.yml
pdninja/: rule_generator.py
rules/: rule_generator.py
